# AI-PPT-Generator

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  企业级 AI PPT SaaS 架构蓝图.docx
backend/: __init__.py  main.py
backend/api/: routes_export.py  routes_generate.py  routes_llm.py  routes_media.py  routes_parse.py  routes_vibe.py  schemas.py
backend/core/: llm_gateway.py
backend/services/: chart_service.py  document_service.py  export_editable.py  image_utils.py  orchestrator.py  pptx_builder.py  research_service.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/api/: client.ts
frontend/src/components/editor/: OutlineEditor.tsx
frontend/src/components/media/: MediaPicker.tsx
frontend/src/components/preview/: SlidePreview.tsx
frontend/src/components/vibe/: VibeChat.tsx
frontend/src/pages/: Home.tsx
frontend/src/store/: pptStore.ts
frontend/src/types/: index.ts
scripts/: setup.ps1  setup.sh
